# mcp-server-demo

./: .env.example  .gitignore  CHANGES.md  Dockerfile  README.md  client.py  generate_image.py  pyproject.toml  test.py  test_genai.py
src/: auth.py  config.py  main.py  storage.py
src/tools/: audio.py  image.py  video.py
