[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "anyio",
    "google-cloud-storage",
    "httpx",
    "mcp[cli]",
    "pydantic",
    "python-dotenv",
    "starlette",
    "pydantic-settings",
    "uvicorn",
    "google-generativeai[cli]>=0.8.6",
    "aiohttp[cli]>=3.13.2",
    "google[cli]>=3.0.0",
    "google-genai>=1.56.0",
]
